# novel_app_py

./: .env  .gitignore  fix_pydantic_v2.py  pyproject.toml  start.py  test_schemas.py  小说阅读APP - API接口文档.md  小说阅读APP-数据库设计.md  小说阅读APP后端 - 详细文件结构和功能说明.md  已生成文件列表.md
app/: main.py
app/ai/: __init__.py  base.py  moderation_ai.py  novel_ai.py  translation_ai.py
app/api/: __init__.py
app/api/v1/: __init__.py  admin.py  analytics.py  auth.py  bookshelf.py  chapters.py  comments.py  novels.py  reader.py  recommendations.py  search.py  translation.py  users.py
app/config/: __init__.py  ai_config.py  database.py  settings.py
app/core/: __init__.py  deps.py  exceptions.py  middleware.py  security.py
app/models/: __init__.py  base.py  chapter.py  comment.py  noval.py  novel.py  translation.py  user.py
app/repositories/: __init__.py  base.py  novel_repository.py  user_repository.py
app/schemas/: __init__.py  admin.py  analytics.py  auth.py  base.py  bookshelf.py  chapter.py  comment.py  novel.py  reader.py  recommendation.py  search.py  translation.py  user.py
app/services/: __init__.py  admin_service.py  analytics_service.py  auth_service.py  base.py  bookshelf_service.py  chapter_service.py  comment_service.py  novel_service.py  reader_service.py  recommendation_service.py  search_service.py  translation_service.py  user_service.py
app/tasks/: __init__.py  celery_app.py
app/utils/: __init__.py  cache.py  content_filter.py  email.py  file_handler.py  file_storage.py  file_upload.py  formatters.py  notification.py  pagination.py  payment.py  recommendation.py  security.py  statistics.py  text_processing.py  validators.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
